DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-04-2007 patrick     Use new environment variable GADGET_DATA_DIR as a way
                        to look up files in GADGET_BASE_DIR/share/gadgeteer.
                        NEW VERSION: 1.3.14
Sep-04-2007 patrick     Set GADGET_BASE_DIR automatically on all platforms.
Jul-28-2007 aronb       Fixed device sharing in cluster configurations.
                        NEW VERSION: 1.3.13
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 1.3.12
Jun-27-2007 patrick     Removed the need for overriding operator delete in
                        subclasses of gadget::Input.
                        NEW VERSION: 1.3.11
Jun-26-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for GADGET_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and GADGET_OPT or JUGGLER_OPT
                        instead of _OPT).
                        NEW VERSION: 1.3.10
Jun-15-2007 aronb       Introduced typedefs for known gadget::InputMixer<>
                        instantiations to be used as the base class for device
                        drivers.
                        NEW VERSION: 1.3.8
Jun-15-2007 aronb       Fixed the VRPN driver so that it works correctly in a
                        cluster configuration again.
May-08-2007 aronb       Simplify the cluster archetecture and use ::create()
                        factory methods.
                        NEW VERSION: 1.3.7