@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-18-2007 patrick     Replaced gadget::InputAreaCocoa::updateOriginAndSize()
+                        with gadget::InputAreaCocoa::resize().
+                        NEW VERSION: 1.3.15
 Sep-04-2007 patrick     Use new environment variable GADGET_DATA_DIR as a way
                         to look up files in GADGET_BASE_DIR/share/gadgeteer.
                         NEW VERSION: 1.3.14
